--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -525,7 +525,7 @@ integer. Once again, a [ValueError] exception is raised:
 
 ```
 >>> [a = float(input())]  # Attempt to convert a fractional number to a float
-3/4\
+3/4
 Traceback (most recent call last):
   File "<pyshell #25>", line 1, in <module>
     a=float(input())
@@ -746,11 +746,11 @@ a nonzero integer, [a], is a factor of another integer,
 [b]:
 
 ```
->>> [def is\_factor(a, b):]  # Define a function to check if a is a factor of b
+>>> [def is_factor(a, b):]  # Define a function to check if a is a factor of b
         [if b % a == 0:]  # If b divided by a leaves no remainder
-            [return True]  # Return True
+            [return True]  
         [else:]  # If b divided by a leaves a remainder
-            [return False]  # Return False
+            [return False]  
 ```
 
 We use the [%] operator introduced earlier in this chapter to
@@ -759,14 +759,14 @@ like "Is 4 a factor of 1024?", you can use the [is\_factor()]
 function:
 
 ```
->>> [is\_factor(4, 1024)]  # Check if 4 is a factor of 1024
+>>> [is_factor(4, 1024)]  # Check if 4 is a factor of 1024
 True
 ```
 
 For any positive integer *n*, how do we find all its positive factors?
 For each of the integers between 1 and *n*, we check the remainder after
 dividing *n* by this integer. If it leaves a remainder of 0, it's a
-factor. We'll use the []{#page_13}[range()] function to write
+factor. We'll use the [range()] function to write
 a program that will go through each of those numbers between 1 and *n*.
 
 Before we write the full program, let's take a look at how
@@ -775,9 +775,9 @@ function looks like this:
 
 ```
 >>> [for i in range(1, 4):]  # Loop through the numbers 1 to 3
-        [print(i)]  # Print each number
-1\
-2\
+        [print(i)]  
+1
+2
 3
 ```
 
@@ -801,10 +801,10 @@ start value, in which case it's assumed to be 0. For example:
 ```
 >>> [for i in range(5):]  # Loop through the numbers 0 to 4
         [print(i)]  # Print each number
-0\
-1\
-2\
-3\
+0  
+1
+2
+3
 4
 ```
 
@@ -817,11 +817,11 @@ step value). For example, the following program prints the odd numbers
 
 ```
 >>> [for i in range(1,10,2):]  # Loop through the odd numbers 1 to 9
-        [print(i)]  # Print each number
-1\
-3\
-5\
-7\
+        [print(i)]
+1
+3
+5
+7
 9
 ```
 
@@ -830,30 +830,37 @@ ready to look at a factor-calculating program. Because I'm writing a
 fairly long program, instead of writing this program in the interactive
 IDLE prompt, I write it in the IDLE editor. You can start the editor by
 selecting **File**[▸]**New Window** in IDLE. Notice that we start
-out by commenting our code with []{#page_14}three straight single quotes
+out by commenting our code with three straight single quotes
 ([']). The text in between those quotes won't be executed by
 Python as part of the program; it's just commentary for us humans.
 
 ```
-   '''\
-   Find the factors of an integer\
-   '''\
-\
-   def factors(b):\
-\
-[➊]     for i in range(1, b+1):  # Loop through the numbers 1 to b
-           if b % i == 0:  # If b divided by i leaves no remainder
-               print(i)  # Print i
-\
-   if \_\_name\_\_ == '\_\_main\_\_':\
-\
-       b = input('Your Number Please: ')
-       b = float(b)
-\
-[➋]     if b > 0 and b.is\_integer():\
-           factors(int(b))
-       else:\
-           print('Please enter a positive integer')
+'''
+This program is designed to find the factors of an integer.
+A factor is a number that divides into another number exactly and without leaving a remainder.
+'''
+
+def factors(b):
+    '''
+    This function takes an integer as input and prints its factors.
+    '''
+    for i in range(1, b+1):  # Loop through the numbers 1 to b
+        if b % i == 0:  # If b divided by i leaves no remainder, i is a factor of b
+            print(i)  # Print the factor
+
+    if __name__ == '__main__':
+    '''
+    This condition checks if the script is being run directly or imported.
+    If it is run directly, it will execute the following code.
+    '''
+
+        b = input('Your Number Please: ')  # Ask the user for a number
+        b = float(b)  # Convert the input to a float
+
+        if b > 0 and b.is_integer():  # Check if the number is a positive integer
+            factors(int(b))  # If it is, find its factors
+        else:
+            print('Please enter a positive integer')  # If it's not, ask for a valid input
 ```
 
 **page_14** 
@@ -874,8 +881,8 @@ factors are printed. For example:
 
 ```
 Your Number Please: [25]
-1\
-5\
+1
+5
 25
 ```
 
@@ -891,7 +898,7 @@ This is an example of how we can make programs more user friendly by
 always checking for invalid input in the program itself. Because our
 program works only for finding the factors of a positive integer, we
 check whether the input number is greater than 0 and is an integer using
-the [is\_integer()] method [➋] to make sure the input is
+the [is_integer()] method [➋] to make sure the input is
 valid. If the input isn't a positive integer, the program prints a
 user-friendly instruction instead of just a big error message.
 
@@ -904,7 +911,7 @@ ___
 Consider three numbers, *a*, *b*, and *n*, where *n* is an integer, such
 that
 
-*a* × *n* = *b*.
+*a* × *n* = *b*.  # This is the basic formula for multiplication
 
 We can say here that *b* is the *n*th *multiple* of *a*. For example, 4
 is the 2nd multiple of 2, and 1024 is the 512nd multiple of 2.
@@ -913,11 +920,11 @@ A multiplication table for a number lists all of that number's
 multiples. For example, the multiplication table of 2 looks like this
 (first three multiples shown here):
 
-2 × 1 = 2
+2 × 1 = 2  # 2 is the 1st multiple of 2
 
-2 × 2 = 4
+2 × 2 = 4  # 4 is the 2nd multiple of 2
 
-2 × 3 = 6
+2 × 3 = 6  # 6 is the 3rd multiple of 2
 
 Our next program generates the multiplication number up to 10 for any
 number input by the user. In this program, we'll use the
@@ -933,10 +940,10 @@ wanted to print them out to make a coherent sentence, I could use the
 [format()] method as follows:
 
 ```
->>> [item1 = 'apples']
->>> [item2 = 'bananas']
->>> [item3 = 'grapes']
->>> [print('At the grocery store, I bought some {0} and {1} and {2}'.format(item1, item2, item3))]
+>>> [item1 = 'apples']  # Label for first fruit
+>>> [item2 = 'bananas']  # Label for second fruit
+>>> [item3 = 'grapes']  # Label for third fruit
+>>> [print('At the grocery store, I bought some {0} and {1} and {2}'.format(item1, item2, item3))]  # Using format() to print a sentence with the fruit labels
 At the grocery store, I bought some apples and bananas and grapes
 ```
 
@@ -955,36 +962,35 @@ It's not necessary to have labels pointing to the values we want to
 print. We can also just type values into [.format()], as in
 the following example:
 
->>> [print('Number 1: {0} Number 2: {1} '.format(1, 3.578))]
+>>> [print('Number 1: {0} Number 2: {1} '.format(1, 3.578))]  # Directly using values in format()
 Number 1: 1 Number 2: 3.578
 
 Note that the number of placeholders and the number of labels or values
 must be equal.
 
 ```
-[]{#page_16}Now that we've seen how [format()] works, we're
+Now that we've seen how [format()] works, we're
 ready to take a look at the program for our multiplication table
 printer:
 
-   '''\
-   Multiplication table printer\
-   '''\
-\
-   def multi\_table(a):\
-\
-[➊]     for i in range(1, 11):\
-           print('{0} x {1} = {2}'.format(a, i, a\*i))
-\
-   if \_\_name\_\_ == '\_\_main\_\_':\
-       a = input('Enter a number: ')
-       multi\_table(float(a))
+'''
+Multiplication table printer
+'''
+
+def multi_table(a):  # Function to print multiplication table of a
+    for i in range(1, 11):  # Looping from 1 to 10
+        print('{0} x {1} = {2}'.format(a, i, a*i))  # Printing each multiple of a
+
+if __name__ == '__main__':
+    a = input('Enter a number: ')  # Taking user input
+    multi_table(float(a))  # Calling the function with user input; string to float or string to int is likely necessary
 ```
 
 **page_16** 
 
 ___
 
-The function [multi\_table()] implements the main
+The function [multi_table()] implements the main
 functionality of the program. It takes the number for which the
 multiplication table will be printed as a parameter, [a].
 Because we want to print the multiplication table from 1 to 10, we have
@@ -995,17 +1001,17 @@ When you execute the program, it asks you to input a number, and the
 program prints its multiplication table:
 
 ```
-Enter a number : [5]
-5.0 x 1 = 5.0\
-5.0 x 2 = 10.0\
-5.0 x 3 = 15.0\
-5.0 x 4 = 20.0\
-5.0 x 5 = 25.0\
-5.0 x 6 = 30.0\
-5.0 x 7 = 35.0\
-5.0 x 8 = 40.0\
-5.0 x 9 = 45.0\
-5.0 x 10 = 50.0
+Enter a number : [5]  # User input
+5.0 x 1 = 5.0  
+5.0 x 2 = 10.0 
+5.0 x 3 = 15.0 
+5.0 x 4 = 20.0 
+5.0 x 5 = 25.0 
+5.0 x 6 = 30.0 
+5.0 x 7 = 35.0 
+5.0 x 8 = 40.0 
+5.0 x 9 = 45.0 
+5.0 x 10 = 50.0 
 ```
 
 See how nice and orderly that table looks? That's because we used the
@@ -1018,15 +1024,15 @@ decimal places, you can specify that with the [format()]
 method. Here is an example:
 
 ```
->>> ['{0}'.format(1.25456)]
-'1.25456'\
->>> ['{0:.2f}'.format(1.25456)]
+>>> ['{0}'.format(1.25456)]  # Printing a float as it is
+'1.25456'
+>>> ['{0:.2f}'.format(1.25456)]  # Printing a float with only two decimal places
 '1.25'
 ```
 
 The first format statement above simply prints the number exactly as we
 entered it. In the second statement, we modify the place holder to
-[{0:.2f}], []{#page_17}meaning that we want only two numbers
+[{0:.2f}], meaning that we want only two numbers
 after the decimal point, with the [f] indicating a floating
 point number. As you can see, there are only two numbers after the
 decimal point in the next output. Note that the number is rounded if
@@ -1034,7 +1040,7 @@ there are more numbers after the decimal point than you specified. For
 example:
 
 ```
->>> ['{0:.2f}'.format(1.25556)]
+>>> ['{0:.2f}'.format(1.25556)]  # Rounding off to two decimal places
 '1.26'
 ```
 
@@ -1043,7 +1049,7 @@ Here, 1.25556 is rounded up to the nearest hundredth and printed as
 integer, zeros are added at the end:
 
 ```
->>> ['{0:.2f}'.format(1)]
+>>> ['{0:.2f}'.format(1)]  # Printing an integer as a float with two decimal places
 '1.00'
 ```
 
@@ -1092,12 +1098,12 @@ ___
 
 An inch is equal to 2.54 centimeters, and you can use the multiplication
 operation to convert a measurement in inches to centimeters. You can
-then []{#page_18}divide the measurement in centimeters by 100 to obtain
+then divide the measurement in centimeters by 100 to obtain
 the measurement in meters. For example, here's how you can convert 25.5
 inches to meters:
 
 ```
->>> [(25.5 \* 2.54) / 100]
+>>> [(25.5 * 2.54) / 100]  # Converting inches to meters
 0.6476999999999999
 ```
 
@@ -1106,7 +1112,7 @@ if you see that your destination is 650 miles away, you're 650 × 1.609
 kilometers away:
 
 ```
->>> [650 \* 1.609]
+>>> [650 * 1.609]  # Converting miles to kilometers
 1045.85
 ```
 
@@ -1124,8 +1130,8 @@ human body temperature. To find the corresponding temperature in degrees
 Celsius, we evaluate the above formula in Python:
 
 ```
->>> [F = 98.6]
->>> [(F - 32) \* (5 / 9)]
+>>> [F = 98.6]  # Fahrenheit temperature
+>>> [(F - 32) * (5 / 9)]  # Converting Fahrenheit to Celsius
 37.0
 ```
 
@@ -1142,8 +1148,8 @@ formula
 You can evaluate this formula in a similar manner:
 
 ```
->>> [C = 37]
->>> [C \* (9 / 5) + 32]
+>>> [C = 37]  # Celsius temperature
+>>> [C * (9 / 5) + 32]  # Converting Celsius to Fahrenheit
 98.60000000000001
 ```
 
@@ -1163,34 +1169,34 @@ relevant input, and then print the calculated result. The program is
 shown below:
 
 ```
-   '''\
-   Unit converter: Miles and Kilometers\
-   '''\
-\
-   def print\_menu():\
+   '''
+   Unit converter: Miles and Kilometers
+   '''
+
+   def print\_menu():  # Function to print the menu
        print('1. Kilometers to Miles')
        print('2. Miles to Kilometers')
-\
-   def km\_miles():\
-       km = float(input('Enter distance in kilometers: '))
-       miles = km / 1.609\
-\
-       print('Distance in miles: {0}'.format(miles))
-\
-   def miles\_km():\
-       miles = float(input('Enter distance in miles: '))
-       km = miles \* 1.609\
-\
-       print('Distance in kilometers: {0}'.format(km))
-\
-   if \_\_name\_\_ == '\_\_main\_\_':\
-[➊]     print\_menu()
-[➋]     choice = input('Which conversion would you like to do?: ')
-       if choice == '1':\
-           km\_miles()
-\
-       if choice == '2':\
-           miles\_km()
+
+   def km\_miles():  # Function to convert kilometers to miles
+       km = float(input('Enter distance in kilometers: '))  # Taking user input in kilometers
+       miles = km / 1.609  # Conversion formula
+
+       print('Distance in miles: {0}'.format(miles))  # Printing the result
+
+   def miles\_km():  # Function to convert miles to kilometers
+       miles = float(input('Enter distance in miles: '))  # Taking user input in miles
+       km = miles \* 1.609  # Conversion formula
+
+       print('Distance in kilometers: {0}'.format(km))  # Printing the result
+
+   if \_\_name\_\_ == '\_\_main\_\_':
+[➊]     print\_menu()  # Printing the menu
+[➋]     choice = input('Which conversion would you like to do?: ')  # Asking user for their choice
+       if choice == '1':
+           km\_miles()  # If choice is 1, call km_miles()
+
+       if choice == '2':
+           miles\_km()  # If choice is 2, call miles_km()
 ```
 
 This is a slightly longer program than the others, but not to worry.
@@ -1208,11 +1214,11 @@ displays the result.
 
 Here is a sample run of the program:
 
-   1. Kilometers to Miles\
-   2. Miles to Kilometers\
-[➊] Which conversion would you like to do?: [2]
-   Enter distance in miles: [100]
-   Distance in kilometers: 160.900000
+   1. Kilometers to Miles
+   2. Miles to Kilometers
+[➊] Which conversion would you like to do?: [2]  # User choice
+   Enter distance in miles: [100]  # User input
+   Distance in kilometers: 160.900000  # Result
 
 []{#page_20}The user is asked to enter a choice at [➊]. The choice
 is entered as 2 (miles to kilometers). The program then asks the user to
@@ -1293,7 +1299,7 @@ evaluating *x*~1~ and *x*~2~:
 ```
 >>> [x\_1 = (-b + D)/(2\*a)]
 >>> [x\_1]
--1.0\
+-1.0
 >>> [x\_2 = (-b - D)/(2\*a)]
 >>> [x\_2]
 -1.0
@@ -1308,20 +1314,20 @@ Our next program combines all these steps in a function
 parameters, calculates the roots, and prints them:
 
 ```
-'''\
-Quadratic equation root calculator\
-'''\
-\
-def roots(a, b, c):\
-\
-    D = (b\*b - 4\*a\*c)*\*0.5\
+'''
+Quadratic equation root calculator
+'''
+
+def roots(a, b, c):
+
+    D = (b\*b - 4\*a\*c)*\*0.5
     x\_1 = (-b + D)/(2\*a)
     x\_2 = (-b - D)/(2\*a)
-\
+
     print('x1: {0}'.format(x\_1))
     print('x2: {0}'.format(x\_2))
-\
-if \_\_name\_\_ == '\_\_main\_\_':\
+
+if \_\_name\_\_ == '\_\_main\_\_':
     a = input('Enter a: ')
     b = input('Enter b: ')
     c = input('Enter c: ')
@@ -1348,8 +1354,8 @@ find the roots for.
 Enter a: [1]
 Enter b: [2]
 Enter c: [1]
-[]{#page_22}\
-x1: -1.000000\
+[]{#page_22}
+x1: -1.000000
 x2: -1.000000
 ```
 
@@ -1402,9 +1408,9 @@ but you can find sample solutions at
 Try writing an "even-odd vending machine," which will take a number as
 input and do two things:
 
-1\. Print whether the number is even or odd.
+1. Print whether the number is even or odd.
 
-2\. Display the number followed by the next 9 even or odd numbers.
+2. Display the number followed by the next 9 even or odd numbers.
 
 If the input is [2], the program should print [even]
 and then print [2, 4, 6, 8, 10, 12, 14, 16, 18, 20].
@@ -1441,19 +1447,19 @@ operation the user wants to carry out. As a head start, here's how you
 can write the program with only the addition operation:
 
 ```
-   '''\
-   Fraction operations\
-   '''\
-   from fractions import Fraction\
-\
-   def add(a, b):\
+   '''
+   Fraction operations
+   '''
+   from fractions import Fraction
+
+   def add(a, b):
        print('Result of Addition: {0}'.format(a+b))
-\
-   if \_\_name\_\_ == '\_\_main\_\_':\
+
+   if \_\_name\_\_ == '\_\_main\_\_':
 [➊]     a = Fraction(input('Enter first fraction: '))
 [➋]     b = Fraction(input('Enter second fraction: '))
        op = input('Operation to perform - Add, Subtract, Divide, Multiply: ')
-       if op == 'Add':\
+       if op == 'Add':
            add(a,b)
 ```
 
@@ -1505,18 +1511,18 @@ asked to do so. Below, you can see an example of the layout for such a
 program:
 
 ```
-   '''\
-   Run until exit layout\
-   '''\
-\
-   def fun():\
+   '''
+   Run until exit layout
+   '''
+
+   def fun():
        print('I am in an endless loop')
-\
-   if \_\_name\_\_ == '\_\_main\_\_':\
-[➊]     while True:\
+
+   if \_\_name\_\_ == '\_\_main\_\_':
+[➊]     while True:
            fun()
 [➋]         answer = input('Do you want to exit? (y) for yes ')
-           if answer == 'y':\
+           if answer == 'y':
                break
 ```
 
@@ -1537,13 +1543,13 @@ continues doing so until the user wishes to exit. Here is a sample run
 of the program:
 
 ```
-I am in an endless loop\
+I am in an endless loop
 Do you want to exit? (y) for yes [n]
-I am in an endless loop\
+I am in an endless loop
 Do you want to exit? (y) for yes [n]
-I am in an endless loop\
+I am in an endless loop
 Do you want to exit? (y) for yes [n]
-I am in an endless loop\
+I am in an endless loop
 Do you want to exit? (y) for yes [y]
 ```
 
@@ -1555,23 +1561,23 @@ so that it keeps going until the user wants to exit. The new version of
 the program is shown below:
 
 ```
-'''\
-Multiplication table printer with\
-exit power to the user\
-'''\
-\
-def multi\_table(a):\
-\
-    for i in range(1, 11):\
+'''
+Multiplication table printer with
+exit power to the user
+'''
+
+def multi\_table(a):
+
+    for i in range(1, 11):
         print('{0} x {1} = {2}'.format(a, i, a\*i))
-\
-if \_\_name\_\_ == '\_\_main\_\_':\
-\
-\
+
+if \_\_name\_\_ == '\_\_main\_\_':
+
+
     [while True:]
         a = input('Enter a number: ')
         multi\_table(float(a))
-\
+
         [answer = input('Do you want to exit? (y) for yes ')]
         [if answer == 'y':]
             [break]
@@ -1590,17 +1596,17 @@ number. Here is a sample run:
 
 ```
 Enter a number: [2]
-2.000000 x 1.000000 = 2.000000\
-2.000000 x 2.000000 = 4.000000\
-2.000000 x 3.000000 = 6.000000\
-2.000000 x 4.000000 = 8.000000\
-[]{#page_26}\
-2.000000 x 5.000000 = 10.000000\
-2.000000 x 6.000000 = 12.000000\
-2.000000 x 7.000000 = 14.000000\
-2.000000 x 8.000000 = 16.000000\
-2.000000 x 9.000000 = 18.000000\
-2.000000 x 10.000000 = 20.000000\
+2.000000 x 1.000000 = 2.000000
+2.000000 x 2.000000 = 4.000000
+2.000000 x 3.000000 = 6.000000
+2.000000 x 4.000000 = 8.000000
+[]{#page_26}
+2.000000 x 5.000000 = 10.000000
+2.000000 x 6.000000 = 12.000000
+2.000000 x 7.000000 = 14.000000
+2.000000 x 8.000000 = 16.000000
+2.000000 x 9.000000 = 18.000000
+2.000000 x 10.000000 = 20.000000
 Do you want to exit? (y) for yes [n]
 Enter a number:
 ```
