--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -755,7 +755,7 @@ a nonzero integer, [a], is a factor of another integer,
 
 We use the [%] operator introduced earlier in this chapter to
 calculate the remainder. If you ever find yourself asking a question
-like "Is 4 a factor of 1024?", you can use the [is\_factor()]
+like "Is 4 a factor of 1024?", you can use the [is_factor()]
 function:
 
 ```
@@ -962,8 +962,10 @@ It's not necessary to have labels pointing to the values we want to
 print. We can also just type values into [.format()], as in
 the following example:
 
+```
 >>> [print('Number 1: {0} Number 2: {1} '.format(1, 3.578))]  # Directly using values in format()
 Number 1: 1 Number 2: 3.578
+```
 
 Note that the number of placeholders and the number of labels or values
 must be equal.
@@ -1163,64 +1165,65 @@ the formula, and the result is 98.6 degrees.
 
 It's a chore to have to write these conversion formulas over and over
 again. Let's write a unit conversion program that will do the
-conversions []{#page_19}for us. This program will present a menu to
+conversions for us. This program will present a menu to
 allow users to select the conversion they want to perform, ask for
 relevant input, and then print the calculated result. The program is
 shown below:
 
 ```
    '''
-   Unit converter: Miles and Kilometers
-   '''
+   Unit converter: Miles and Kilometers
+   '''
 
-   def print\_menu():  # Function to print the menu
-       print('1. Kilometers to Miles')
-       print('2. Miles to Kilometers')
+   def print_menu():  # Function to print the menu
+       print('1. Kilometers to Miles')
+       print('2. Miles to Kilometers')
 
-   def km\_miles():  # Function to convert kilometers to miles
-       km = float(input('Enter distance in kilometers: '))  # Taking user input in kilometers
-       miles = km / 1.609  # Conversion formula
+   def km_miles():  # Function to convert kilometers to miles
+       km = float(input('Enter distance in kilometers: '))  # Taking user input in kilometers
+       miles = km / 1.609  # Conversion formula
 
-       print('Distance in miles: {0}'.format(miles))  # Printing the result
+       print('Distance in miles: {0}'.format(miles))  # Printing the result
 
-   def miles\_km():  # Function to convert miles to kilometers
-       miles = float(input('Enter distance in miles: '))  # Taking user input in miles
-       km = miles \* 1.609  # Conversion formula
+   def miles_km():  # Function to convert miles to kilometers
+       miles = float(input('Enter distance in miles: '))  # Taking user input in miles
+       km = miles * 1.609  # Conversion formula
 
-       print('Distance in kilometers: {0}'.format(km))  # Printing the result
+       print('Distance in kilometers: {0}'.format(km))  # Printing the result
 
-   if \_\_name\_\_ == '\_\_main\_\_':
-[➊]     print\_menu()  # Printing the menu
-[➋]     choice = input('Which conversion would you like to do?: ')  # Asking user for their choice
-       if choice == '1':
-           km\_miles()  # If choice is 1, call km_miles()
+   if __name__ == '__main__':
+       print_menu()  # Printing the menu
+       choice = input('Which conversion would you like to do?: ')  # Asking user for their choice
+       if choice == '1':
+           km_miles()  # If choice is 1, call km_miles()
 
-       if choice == '2':
-           miles\_km()  # If choice is 2, call miles_km()
+       if choice == '2':
+           miles_km()  # If choice is 2, call miles_km()
 ```
 
 This is a slightly longer program than the others, but not to worry.
 It's actually simple. Let's start from [➊]. The
-[print\_menu()] function is called, which prints a menu with
+[print_menu()] function is called, which prints a menu with
 two unit conversion choices. At [➋], the user is asked to select
 one of the two conversions. If the choice is entered as 1 (kilometers to
-miles), the function [km\_miles()] is called. If the choice is
-entered as 2 (miles to kilometers), the function [miles\_km()]
+miles), the function [km_miles()] is called. If the choice is
+entered as 2 (miles to kilometers), the function [miles_km()]
 is called. In both of these functions, the user is first asked to enter
 a distance in the unit chosen for conversion (kilometers for
-[km\_miles()] and miles for [miles\_km()]). The
+[km_miles()] and miles for [miles_km()]). The
 program then performs the conversion using the corresponding formula and
 displays the result.
 
 Here is a sample run of the program:
-
+```
    1. Kilometers to Miles
    2. Miles to Kilometers
 [➊] Which conversion would you like to do?: [2]  # User choice
    Enter distance in miles: [100]  # User input
    Distance in kilometers: 160.900000  # Result
+```
 
-[]{#page_20}The user is asked to enter a choice at [➊]. The choice
+The user is asked to enter a choice at [➊]. The choice
 is entered as 2 (miles to kilometers). The program then asks the user to
 enter the distance in miles to be converted to kilometers and prints the
 conversion.
@@ -1246,8 +1249,8 @@ Finding the value of the expression on the right gives you the value of
 Python, you can do this as follows:
 
 ```
->>> [x = 10 - 500 + 79]
->>> [x]
+>>> [x = 10 - 500 + 79]  # Calculation of x
+>>> [x]  # Displaying the value of x
 -411
 ```
 
@@ -1279,9 +1282,9 @@ and *c* as the labels [a], [b], and [c]
 with the appropriate values:
 
 ```
->>> [a = 1]
->>> [b = 2]
->>> [c = 1]
+>>> [a = 1]  # Assigning value to a
+>>> [b = 2]  # Assigning value to b
+>>> [c = 1]  # Assigning value to c
 ```
 
 []{#page_21}Then, considering that both the formulas have the term
@@ -1289,7 +1292,7 @@ with the appropriate values:
 ![image](graphics/e0021-01.jpg):
 
 ```
->>> [D = (b\*\*2 -- 4\*a\*c)*\*0.5]
+>>> [D = (b**2 -- 4*a*c)**0.5]  # Calculating the square root of b^2 - 4ac
 ```
 
 As you can see, we evaluate the square root of *b*^2^ -- 4*ac* by
@@ -1297,11 +1300,11 @@ raising it to the 0.5th power. Now, we can write the expressions for
 evaluating *x*~1~ and *x*~2~:
 
 ```
->>> [x\_1 = (-b + D)/(2\*a)]
->>> [x\_1]
+>>> [x_1 = (-b + D)/(2*a)]  # Calculating x1
+>>> [x_1]  # Displaying the value of x1
 -1.0
->>> [x\_2 = (-b - D)/(2\*a)]
->>> [x\_2]
+>>> [x_2 = (-b - D)/(2*a)]  # Calculating x2
+>>> [x_2]  # Displaying the value of x2
 -1.0
 ```
 
@@ -1320,18 +1323,18 @@ Quadratic equation root calculator
 
 def roots(a, b, c):
 
-    D = (b\*b - 4\*a\*c)*\*0.5
-    x\_1 = (-b + D)/(2\*a)
-    x\_2 = (-b - D)/(2\*a)
+    D = (b*b - 4*a*c)**0.5  # Calculating the square root of b^2 - 4ac
+    x_1 = (-b + D)/(2*a)  # Calculating x1
+    x_2 = (-b - D)/(2*a)  # Calculating x2
 
-    print('x1: {0}'.format(x\_1))
-    print('x2: {0}'.format(x\_2))
+    print('x1: {0}'.format(x_1))  # Displaying the value of x1
+    print('x2: {0}'.format(x_2))  # Displaying the value of x2
 
-if \_\_name\_\_ == '\_\_main\_\_':
-    a = input('Enter a: ')
-    b = input('Enter b: ')
-    c = input('Enter c: ')
-    roots(float(a), float(b), float(c))
+if __name__ == '__main__':
+    a = input('Enter a: ')  # Taking input for a
+    b = input('Enter b: ')  # Taking input for b
+    c = input('Enter c: ')  # Taking input for c
+    roots(float(a), float(b), float(c))  # Calling the roots function
 ```
 
 **page_22** 
@@ -1354,7 +1357,7 @@ find the roots for.
 Enter a: [1]
 Enter b: [2]
 Enter c: [1]
-[]{#page_22}
+
 x1: -1.000000
 x2: -1.000000
 ```
@@ -1418,7 +1421,7 @@ Similarly, if the input is [1], the program should print
 [odd] and then print [1, 3, 5, 7, 9, 11, 13, 15, 17,
 19].
 
-[]{#page_23}Your program should use the [is\_integer()] method
+[]{#page_23}Your program should use the [is_integer()] method
 to display an error message if the input is a number with significant
 digits beyond the decimal point.
 
@@ -1450,17 +1453,17 @@ can write the program with only the addition operation:
    '''
    Fraction operations
    '''
-   from fractions import Fraction
+   from fractions import Fraction  # Importing Fraction from fractions module
 
    def add(a, b):
-       print('Result of Addition: {0}'.format(a+b))
+       print('Result of Addition: {0}'.format(a+b))  # Adding two fractions and printing the result
 
-   if \_\_name\_\_ == '\_\_main\_\_':
-[➊]     a = Fraction(input('Enter first fraction: '))
-[➋]     b = Fraction(input('Enter second fraction: '))
-       op = input('Operation to perform - Add, Subtract, Divide, Multiply: ')
+   if __name__ == '__main__':
+       a = Fraction(input('Enter first fraction: '))  # Taking input for first fraction
+       b = Fraction(input('Enter second fraction: '))  # Taking input for second fraction
+       op = input('Operation to perform - Add, Subtract, Divide, Multiply: ')  # Taking input for operation
        if op == 'Add':
-           add(a,b)
+           add(a,b)  # If operation is 'Add', call the add function
 ```
 
 You've already seen most of the elements in this program. At [➊]
@@ -1516,14 +1519,14 @@ program:
    '''
 
    def fun():
-       print('I am in an endless loop')
+       print('I am in an endless loop')  # Printing a statement
 
-   if \_\_name\_\_ == '\_\_main\_\_':
-[➊]     while True:
-           fun()
-[➋]         answer = input('Do you want to exit? (y) for yes ')
+   if __name__ == '__main__':
+       while True:  # Infinite loop
+           fun()  # Calling the fun function
+           answer = input('Do you want to exit? (y) for yes ')  # Asking the user if they want to exit
            if answer == 'y':
-               break
+               break  # If user input is 'y', exit the loop
 ```
 
 We define an infinite loop using [while True] at [➊]. A
@@ -1566,27 +1569,27 @@ Multiplication table printer with
 exit power to the user
 '''
 
-def multi\_table(a):
+def multi_table(a):
 
     for i in range(1, 11):
-        print('{0} x {1} = {2}'.format(a, i, a\*i))
+        print('{0} x {1} = {2}'.format(a, i, a*i))  # Printing the multiplication table
 
-if \_\_name\_\_ == '\_\_main\_\_':
+if __name__ == '__main__':
 
 
-    [while True:]
-        a = input('Enter a number: ')
-        multi\_table(float(a))
+    while True:  # Infinite loop
+        a = input('Enter a number: ')  # Taking user input for a number
+        multi_table(float(a))  # Calling the multi_table function with user input
 
-        [answer = input('Do you want to exit? (y) for yes ')]
-        [if answer == 'y':]
-            [break]
+        answer = input('Do you want to exit? (y) for yes ')  # Asking the user if they want to exit
+        if answer == 'y':
+            break  # If user input is 'y', exit the loop
 ```
 
 If you compare this program to the one we wrote earlier, you'll see that
 the only change is the addition of the [while] loop, which
 includes the prompt asking the user to input a number and the call to
-the [multi\_table()] function.
+the [multi_table()] function.
 
 When you run the program, the program will ask for a number and print
 its multiplication table, as before. However, it will also subsequently
