--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -1421,7 +1421,7 @@ Similarly, if the input is [1], the program should print
 [odd] and then print [1, 3, 5, 7, 9, 11, 13, 15, 17,
 19].
 
-[]{#page_23}Your program should use the [is_integer()] method
+Your program should use the [is_integer()] method
 to display an error message if the input is a number with significant
 digits beyond the decimal point.
 
@@ -1440,6 +1440,7 @@ convert between units of mass (such as kilograms and pounds) and between
 units of temperature (such as Celsius and Fahrenheit).
 
 **page_24** 
+
 ___
 
 #### **7.4 #4: Fraction Calculator** 
@@ -1481,7 +1482,7 @@ Operation to perform - Add, Subtract, Divide, Multiply: [Add]
 Result of Addition: 1
 ```
 
-[]{#page_24}Try adding support for other operations such as subtraction,
+Try adding support for other operations such as subtraction,
 division, and multiplication. For example, here's how your program
 should be able to calculate the difference of two fractions:
 
@@ -1496,6 +1497,7 @@ In the case of division, you should let the user know whether the first
 fraction is divided by the second fraction or vice versa.
 
 **page_25** 
+
 ___
 
 #### **7.5 #5: Give Exit Power to the User** 
