--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -1543,7 +1543,7 @@ the loop using the [break] statement ([break] exits
 out of the innermost loop without executing any other statement in that
 loop). If the user enters any other input (or none at all, just pressing
 [ENTER]), the [while] loop continues
-[]{#page_25}execution---that is, it prints the string again and
+execution---that is, it prints the string again and
 continues doing so until the user wishes to exit. Here is a sample run
 of the program:
 
@@ -1559,6 +1559,7 @@ Do you want to exit? (y) for yes [y]
 ```
 
 **page_26** 
+
 ___
 
 Based on this example, let's rewrite the multiplication table generator
@@ -1605,7 +1606,6 @@ Enter a number: [2]
 2.000000 x 2.000000 = 4.000000
 2.000000 x 3.000000 = 6.000000
 2.000000 x 4.000000 = 8.000000
-[]{#page_26}
 2.000000 x 5.000000 = 10.000000
 2.000000 x 6.000000 = 12.000000
 2.000000 x 7.000000 = 14.000000
